--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "angular-file-uploader": "^7.0.3",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.4.1",
     "ngx-toastr": "^13.2.0",
