--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~10.2.0",
     "@angular/localize": "~10.2.0",
     "@angular/platform-browser": "~10.2.0",
@@ -24,6 +25,7 @@
     "angular-file-uploader": "^7.0.3",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.4.1",
+    "firebase": "^8.4.1",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
